# language

./: .gitignore  CMakeLists.txt  readme.md
include/hash/: rapidhash.h
platform/: platform.h  win64console.c
resources/scripts/: source.wave
src/: main.c  main.h
src/common/: constants.h  debug.c  debug.h  defines.h  error_codes.c  error_codes.h  error_codes_inline.h  macros.h
src/common/data/color/: color.c  color.h  color_registry.c  color_registry.h  color_registry_inline.h
src/common/data/string/: hash.c  hash.h  string.c  string.h
src/common/math/: bit_utils.c  bit_utils.h
src/common/math/mat/: mat4.c  mat4.h
src/common/math/primitives/: f32_math.c  f32_math.h  f64_math.c  f64_math.h  iint_math.c  iint_math.h  iint_math_inline.h  uint_math.c  uint_math.h  uint_math_inline.h
src/common/math/vec/: vec2d.c  vec2d.h  vec2f.c  vec2f.h  vec2i.c  vec2i.h  vec3d.c  vec3d.h  vec3f.c  vec3f.h  vec3i.c  vec3i.h  vec4f.c  vec4f.h
src/common/memory/: heap_manager.c  heap_manager.h  memory.c  memory.h
src/language/: wave_common.c  wave_common.h  wave_limits.h  wave_opcodes.c  wave_opcodes.h  wave_opcodes_inline.h
src/language/api/: wave_api_include_end.h  wave_api_include_header.h  wave_api_include_start.h
src/language/compiler/: compiler.c  compiler.h  disassembler.c  disassembler.h  optimizer.c  optimizer.h  parser.c  parser.h  tokenizer.c  tokenizer.h  type_resolver.c  type_resolver.h  wave_compiler.c  wave_compiler_common.h  wave_disassembler.c  wave_disassembler.h  wave_parser.c  wave_parser.h  wave_precedence.c  wave_precedence.h  wave_tokenizer.c  wave_tokenizer.h
src/language/compiler/data/: wave_ast.c  wave_ast.h  wave_compiler_common.h  wave_precedence.c  wave_precedence.h  wave_token_list_inline.h  wave_type.c  wave_type.h
src/language/func/: wave_debug.c  wave_debug.h  wave_math.c  wave_math.h
src/language/runtime/: wave_vm.c  wave_vm.h  wave_vm_container.c  wave_vm_container.h  wave_vm_inline.h  wave_vm_stack_inline.h
